- 02-2018 : réécriture/refonte complète du plugin
- 09-2017 : info.xml gelöscht
- 05-2017 : ajout du fichier plugin info en json
- 11-2016 : Hinzufügen einiger PTZ-Befehle (bis zu einem Redesign)
- 10-2016 : erweiterte Anzeige hinzugefügt
- 2.7 : correction des dépendances pour Debian Wheezy
- 2.6 : correction de la compatibilité avec mot de passe complexe (caractères spéciaux). Automatisation de l’installation des dépendances
- 2.5 : ajout activation ou désactivation détection de mouvement
- 2.4 : Amélioration redimensionnement widget Dashboard + correction widget mobile
- 2.3 : Nouveau logo (merci Aloïs), refonte de la documentation et bug fix
- 2.2 : Séparation protocole http/https réseau Interne/Externe. Widget caméra Live redimmentionnable. Nouveaux switchs sur les boutons activer/visible/historiser dans la config
- 2.1 : Correction d’un bug avec les caméras qui ont un nom accentué.
- 2 : Ajout fonctionnalité : Live des caméras, possibilité de demander un enregistrement pour x minutes, corrections bug
- 1.6 : Ajout fonctionnalité : Possibilité de spécifier une durée d’enregistrement.Ajout du statut d’enregistrement dans la liste des caméras refresh des caméras toutes les 10 secondes sur la vue équipement.
- 1.5.1 : Correction de bugs, ajout de logs
- 1.5 : Correction de bugs: -Encoding du mail (problème accents) -Problème empéchant le teste du token dropbox -Problème lors du changement de nom d’une caméra dans dropbox -Problème d’affichage dans la liste des caméras
- 1.4 : ajout de la documentation
- 1.3 : migration du code envoi de mail, de Ruby vers PHP + ajout historique statut + classement sur le Dashboard
- 1.2 : 1. veröffentlichte Version 